--- a/styles/main.css
+++ b/styles/main.css
@@ -54,6 +54,83 @@ body {
 .nav-links li a:hover {
   background-color: #555;
 }
+/* ==============BLOG============================ */
+
+.container1 {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.box {
+  width: calc(30% - 10px);
+  margin-bottom: 20px;
+  background-size: cover;
+  /* opacity: 0.5; */
+  padding: 100px 0;
+  text-align: center;
+  color: #fff;
+  position: relative;
+  transition: transform 0.5s;
+}
+.box img {
+  opacity: 0.5;
+}
+
+.box:hover {
+  transform: translate(-5px);
+}
+
+.box h2 {
+  position: relative;
+  top: 50%;
+  border: solid white;
+  width: fit-content;
+  margin: 0 auto;
+  border-radius: 10px;
+  padding: 5px;
+  background-color: #000000ec;
+  color: #fff;
+  font-size: 2vw;
+  transition: transform 0.5s;
+}
+.box h2:hover {
+  transform: translate(-3px);
+  background-color: #12cfb6;
+}
+
+.box:nth-child(odd) {
+  background-image: url('../images/identity.jpeg');
+}
+
+.box:nth-child(even) {
+  background-image: url('../images/maouri.jpg');
+}
+
+.box h2 {
+  font-size: 24px;
+  margin-top: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+@media (max-width: 768px) {
+  .box {
+    width: 100%;
+  }
+}
+
+/* ========================JAVASCRIPT================================== */
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
+}
 
 .html {
   border: 3px solid #12cfb6;
@@ -64,6 +141,7 @@ body {
 .function {
   border: 3px solid #2c0344;
 }
+/* =========================RESPONSIVENESS==================================== */
 
 @media screen and (max-width: 300px) {
   .nav-links {
@@ -84,8 +162,9 @@ body {
   }
 }
 
-.container h1,
-p {
+/* ========INDEX FILE======================================================== */
+
+.container {
   padding-left: 50px;
 }
 
@@ -228,6 +307,8 @@ small {
   color: #777;
   font-style: italic;
 }
+
+/* =========FOOTER====================== */
 
 .footer {
   background-color: #000000;
