adding foundation reflection file and other additions on learning plan to the blog

--- a/styles/main.css
+++ b/styles/main.css
@@ -125,6 +125,23 @@ body {
   }
 }
 
+/* =================EDUCATION PLAN====================================*/
+
+section {
+  max-width: 1000px;
+  margin: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+  background: radial-gradient(#afc5b7, #a5aaa7);
+}
+section h4 {
+  color: initial;
+  font-weight: bold;
+}
+.bootcamp {
+  background: radial-gradient(#a2c9b0, #93a59a);
+}
+
 /* ========================JAVASCRIPT================================== */
 
 .container {
